--- a/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
+++ b/house.gov.by/15fb64f9fa26c0fb584b1bed05a8d67488c339fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:39:14 GMT
+    - Tue, 07 Nov 2017 21:23:26 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=elanlmm3c6f4d10jb29pjmj8q5; path=/
+    - PHPSESSID=psknrollniddtdsm7hotlvte75; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:39:14 GMT
+recorded_at: Tue, 07 Nov 2017 21:23:27 GMT
