--- a/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
+++ b/house.gov.by/9b7e469bdec8b21f2c71544f7842ecc616e25cf7.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 21:59:18 GMT
+    - Tue, 07 Nov 2017 21:28:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=mbnqnb1pkff393lnnopjk85rk5; path=/
+    - PHPSESSID=kgg69s1kn0ihpmm8345vncsjv1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 21:59:18 GMT
+recorded_at: Tue, 07 Nov 2017 21:28:01 GMT
