--- a/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
+++ b/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:57:51 GMT
+    - Tue, 07 Nov 2017 21:46:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=h12decb2jeemem2a48e6llqa74; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:57:51 GMT
+recorded_at: Tue, 07 Nov 2017 21:46:10 GMT
