--- a/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
+++ b/house.gov.by/24bc65cba9257ede0d18534acfb8be7cd6e47929.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:59:03 GMT
+    - Tue, 07 Nov 2017 21:46:39 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=hfo3ivdbpbojijmaev6hmtten3; path=/
+    - PHPSESSID=hs4fvqo0i85k6fc3kf6sjnkom3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:59:03 GMT
+recorded_at: Tue, 07 Nov 2017 21:46:40 GMT
