--- a/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
+++ b/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 22:00:36 GMT
+    - Tue, 07 Nov 2017 22:10:22 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=o49ocqknvfaer61v6qi60hab12; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 22:00:37 GMT
+recorded_at: Tue, 07 Nov 2017 22:10:22 GMT
