--- a/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
+++ b/house.gov.by/ab08b5964a5f939d2ec57008fa64e725ae632711.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Tue, 07 Nov 2017 20:49:05 GMT
+    - Wed, 08 Nov 2017 17:53:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=n11tif67bm7ebphmkqnl0e5g76; path=/
+    - PHPSESSID=t8at7b3j6us6ga9jrqm7o6cj07; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 07 Nov 2017 20:49:06 GMT
+recorded_at: Wed, 08 Nov 2017 17:53:30 GMT
