--- a/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
+++ b/house.gov.by/7e9f66ca0cfc9e80efc44ab0f3443c074abd860d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Tue, 07 Nov 2017 21:16:08 GMT
+    - Wed, 08 Nov 2017 18:13:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=i8165r345vmbeolhgngmo5m515; path=/
+    - PHPSESSID=83nls951brqa3upu9hc323e1j5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 07 Nov 2017 21:16:09 GMT
+recorded_at: Wed, 08 Nov 2017 18:13:10 GMT
