--- a/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
+++ b/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Tue, 07 Nov 2017 21:17:18 GMT
+    - Wed, 08 Nov 2017 18:14:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=plpndstv8re2edvhv8ufqm83e2; path=/
+    - PHPSESSID=obp2d9l73cpjkbae0qbvrqk744; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 07 Nov 2017 21:17:19 GMT
+recorded_at: Wed, 08 Nov 2017 18:14:52 GMT
