--- a/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
+++ b/house.gov.by/bb638de07eb37a6a331149842af102c46009e290.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Tue, 07 Nov 2017 21:17:57 GMT
+    - Wed, 08 Nov 2017 18:15:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=n4ltbvferje01ejgrisse9qua0; path=/
+    - PHPSESSID=dlt0q88vdc4hs2do1qtgilni05; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 07 Nov 2017 21:17:58 GMT
+recorded_at: Wed, 08 Nov 2017 18:15:30 GMT
