--- a/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
+++ b/house.gov.by/03666e2052194ccd0d620d67ad9c3b5b50e78b2a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Tue, 07 Nov 2017 21:35:41 GMT
+    - Wed, 08 Nov 2017 18:31:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=k9kb6nrnhgbd90vkgbfic783q3; path=/
+    - PHPSESSID=pnnoikn4k9o8v2psnmmu00ocq0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 07 Nov 2017 21:35:42 GMT
+recorded_at: Wed, 08 Nov 2017 18:31:32 GMT
