--- a/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
+++ b/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Tue, 07 Nov 2017 22:10:22 GMT
+    - Wed, 08 Nov 2017 19:03:14 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=m5jsrp3v13tvl492jqkeckjub2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 07 Nov 2017 22:10:22 GMT
+recorded_at: Wed, 08 Nov 2017 19:03:15 GMT
