--- a/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
+++ b/house.gov.by/24f50492dfbf46c42fb96a17f622baf2498cbe23.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 21:37:43 GMT
+    - Wed, 08 Nov 2017 19:17:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=de5iqbgs1hqfc1otk3d7tb73k3; path=/
+    - PHPSESSID=hoiv60dshvqcpgov5be1ng1ca4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 21:37:43 GMT
+recorded_at: Wed, 08 Nov 2017 19:17:19 GMT
