--- a/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
+++ b/house.gov.by/c00a4c423678c1c97adf54eb4aac6fe0d24dcad8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 09 Nov 2017 03:58:05 GMT
+    - Mon, 13 Nov 2017 09:26:37 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=m85nchdtcgf46vqghtopkbe641; path=/
+    - PHPSESSID=sphdcnqht5a4d658008hskoha3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Nov 2017 03:58:05 GMT
+recorded_at: Mon, 13 Nov 2017 09:26:38 GMT
