--- a/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
+++ b/house.gov.by/5cdfb777497bb1c107082ec4e25026842416f62c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 09 Nov 2017 03:48:50 GMT
+    - Mon, 13 Nov 2017 09:27:50 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=n9o8eht4f6jec8l5dvuhtr05v6; path=/
+    - PHPSESSID=qi9puu8pda9fm2n0mqg5uen136; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Nov 2017 03:48:50 GMT
+recorded_at: Mon, 13 Nov 2017 09:27:51 GMT
