--- a/house.gov.by/517994db117c9e65235905611143905242402edd.yml
+++ b/house.gov.by/517994db117c9e65235905611143905242402edd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 09 Nov 2017 05:48:46 GMT
+    - Mon, 13 Nov 2017 09:29:36 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=1foeve6kq0s8vrtnb7blfbt0n0; path=/
+    - PHPSESSID=p2h7eqptp7rdq8e6oct5jukq83; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Nov 2017 05:48:47 GMT
+recorded_at: Mon, 13 Nov 2017 09:29:37 GMT
