--- a/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
+++ b/house.gov.by/ececcc5f7fc294e39414b4bd63fc9da75f48b6aa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 09 Nov 2017 05:43:15 GMT
+    - Mon, 13 Nov 2017 10:06:12 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=521pdvp9ee1o35geuiraan7vj2; path=/
+    - PHPSESSID=o47fv1egkgp6pm6mgifemr5l00; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Nov 2017 05:43:16 GMT
+recorded_at: Mon, 13 Nov 2017 10:06:13 GMT
