--- a/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.yml
+++ b/house.gov.by/9d5d8b1cd29a0fe86cc845c172ed4fd7c7d2cd29.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 09 Nov 2017 03:34:44 GMT
+    - Mon, 13 Nov 2017 10:42:43 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=e81k0mpm35qm7truskkbeblo16; path=/
+    - PHPSESSID=tetfg6kfdvug409n237n9r97g4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Nov 2017 03:34:45 GMT
+recorded_at: Mon, 13 Nov 2017 10:42:44 GMT
