--- a/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
+++ b/house.gov.by/112adc08aa09be034f549c3a1c75bccb1324aeec.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 09 Nov 2017 05:20:58 GMT
+    - Mon, 13 Nov 2017 10:44:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=2382ca7nerdili34limld9gq75; path=/
+    - PHPSESSID=sjnds2c8c00ok4sqsrf6lboup3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Nov 2017 05:20:58 GMT
+recorded_at: Mon, 13 Nov 2017 10:44:09 GMT
