--- a/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
+++ b/house.gov.by/8e4b9accf9e8a1094b1f341c747bc954bae45370.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 13 Nov 2017 10:07:26 GMT
+    - Mon, 13 Nov 2017 10:57:32 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=82teu0jaq7bginlvf8vjtst3k3; path=/
+    - PHPSESSID=il84iosatjte2l05csj2htrl04; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 13 Nov 2017 10:07:27 GMT
+recorded_at: Mon, 13 Nov 2017 10:57:33 GMT
