--- a/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
+++ b/house.gov.by/1a9765cc5d4cafefd5c57da3a6c44b7d48af7ee3.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 13 Nov 2017 09:28:53 GMT
+    - Mon, 13 Nov 2017 11:07:18 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9v2f6v6m7a2d5upvbjncldiej5; path=/
+    - PHPSESSID=7jveme2if4n6l83cro0kbtc7q5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 13 Nov 2017 09:28:54 GMT
+recorded_at: Mon, 13 Nov 2017 11:07:18 GMT
