--- a/house.gov.by/1c56df78afc242b33365e5c9f91904498272fecd.yml
+++ b/house.gov.by/1c56df78afc242b33365e5c9f91904498272fecd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 13 Nov 2017 10:55:23 GMT
+    - Mon, 13 Nov 2017 11:22:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=nr0pv0o3u2f4ouv5dg2o15te03; path=/
+    - PHPSESSID=qgt6ol3hemns1ifufm845ne6g0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 13 Nov 2017 10:55:24 GMT
+recorded_at: Mon, 13 Nov 2017 11:22:56 GMT
