--- a/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
+++ b/house.gov.by/9c2d88cc13bd506ceba3c56e083f7cb1e73ee076.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 13 Nov 2017 10:17:41 GMT
+    - Mon, 13 Nov 2017 11:59:32 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jbjreq7jrtsueqebr32dugl1l4; path=/
+    - PHPSESSID=fo849d0lnb48vje1nhe7atfp15; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 13 Nov 2017 10:17:42 GMT
+recorded_at: Mon, 13 Nov 2017 11:59:34 GMT
