--- a/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
+++ b/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 13 Nov 2017 10:27:10 GMT
+    - Mon, 13 Nov 2017 12:00:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=0vt5kacqkdj5hcc00ppt9o68v1; path=/
+    - PHPSESSID=3ad9klqse6oks16ejaj5gcoir0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 13 Nov 2017 10:27:11 GMT
+recorded_at: Mon, 13 Nov 2017 12:00:26 GMT
