--- a/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
+++ b/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 13 Nov 2017 10:00:39 GMT
+    - Mon, 13 Nov 2017 12:14:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=iij6raj3dmnutqt346nq2pc9r5; path=/
+    - PHPSESSID=rosccp46hm2h04n89tkas3rn51; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 13 Nov 2017 10:00:40 GMT
+recorded_at: Mon, 13 Nov 2017 12:14:09 GMT
